--- a/homestay/src/styles/AboutUslist.scss
+++ b/homestay/src/styles/AboutUslist.scss
@@ -1,3 +1,4 @@
+@import "../styles/breakpoints.scss";
 .aboutuslist {
   position: relative;
   z-index: 2;
@@ -6,32 +7,18 @@
   gap: 10px;
   justify-content: center;
   margin: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  letter-spacing: 0px;
+  font-weight: 1;
+
   &_box {
-    border-radius: 30px;
-    height: 140px;
-    width: 285px;
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 100px;
-    padding: 15px;
+    &_top {
+      display: flex;
+    }
     &_content {
-      display: none;
-    }
-    &:hover {
-      cursor: pointer;
-      background-color: rgb(255, 255, 255);
-      .aboutuslist_box_icon {
-        display: none;
+      p {
+        font-size: 13px;
       }
-      .aboutuslist_box_content {
-        display: block;
-        font-size: 15px;
-      }
-    }
-    &_booking {
-      font-size: 100px;
     }
   }
 }
