--- a/homestay/src/styles/Footer.scss
+++ b/homestay/src/styles/Footer.scss
@@ -1,93 +1,41 @@
-@import "./variables.scss";
-@import "./breakpoints.scss";
-
 .footer {
+  height: 200px;
+  background-color: rgba(182, 182, 247, 0.369);
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 50px;
-  padding: 10px 70px;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px 0pxx;
+  width: 100%;
+  gap: 30px;
+  &_top {
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
-  @include lg {
-    padding: 10px 30px;
-  }
-
-  &_left {
-    max-width: 400px;
-
-    img {
-      max-width: 150px;
-      margin-bottom: 20px;
+    &_logo {
+      height: 100px;
+      width: 150px;
     }
-
     &_socials {
       display: flex;
-      gap: 25px;
-      margin-top: 20px;
-
-      &_icon {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: $pinkred;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        transition: all 0.5s ease-in-out;
-
-        &:hover {
-          transform: scale(1.2);
-        }
-      }
+      justify-content: center;
+      gap: 10px;
+      font-size: 20px;
     }
   }
+  &_bottom {
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  &_center {
-    text-decoration: none;
-
-    ul {
-      list-style: none;
-      margin-top: 20px;
-      cursor: pointer;
-
-      li:hover {
-        color: $pinkred;
-      }
-
-      a {
-        text-decoration: none;
-        color: black;
-
-        &:hover {
-          color: $pinkred;
-        }
-      }
-    }
-
-    @include md {
-      display: none;
-    }
-  }
-
-  &_right {
-    max-width: 350px;
-
-    h3 {
-      margin-bottom: 20px;
-    }
-
+    gap: 100px;
     &_info {
-      display: flex;
-
-      p {
-        margin-left: 20px;
-        margin-bottom: 15px;
+      &_icon {
+        font-size: 15px;
       }
-    }
-
-    @include sm {
-      display: none;
     }
   }
 }
