--- a/homestay/src/styles/Login.scss
+++ b/homestay/src/styles/Login.scss
@@ -1,81 +1,93 @@
-@use './breakpoints.scss' as *;
-@use './variables.scss' as *;
+@use "./breakpoints.scss" as *;
+@use "./variables.scss" as *;
 
 .login {
-    height: 100vh;
-    width: 100vw;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px;
+  background-color: #ffffff;
+  &_content {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-   background:url("https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg");
-  padding: 30px;
-   
-    &_content {
+    gap: 15px;
+    width: 90%;
+    height: 80%;
+    padding: 40px;
+    background-color: #dddbdb;
+    border-radius: 20px;
+    @include sm {
+      width: 80%;
+    }
+    @include md {
+      width: 60%;
+    }
+    @include lg {
+      width: 40%;
+    }
+
+    &_form {
       display: flex;
       flex-direction: column;
-      gap: 15px;
-      width: 40%;
-      padding: 40px;
-      background-color: rgba(0, 0, 0, 0.8);
-      border-radius: 20px;
-  
-      @include lg {
-        width: 60%
-      }
-  
-      @include mm {
-        width: 80%
-      }
-  
-      &_form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-  
-        input {
-          width: 100%;
-          padding: 7px 15px;
-          background-color: transparent;
-          border: none;
-          border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-          outline: none;
-          text-align: center;
-          color: white;
-  
-          &:focus
-          {
-            border-bottom: 1px solid white;
-            &::placeholder
-            {
-              opacity: 0.3;
-            }
+      align-items: center;
+      gap: 50px;
+      height: 80%;
+      width: 80%;
+      input {
+        font-size: 15px;
+        width: 100%;
+        padding: 7px 15px;
+        background-color: transparent;
+        border: none;
+        border-bottom: 1px solid rgba(21, 1, 1, 0.3);
+        outline: none;
+        text-align: center;
+        color: black;
+
+        &:focus,
+        &:hover {
+          border-bottom: 1px solid rgb(0, 0, 0);
+          &::placeholder {
+            opacity: 0.3;
           }
         }
-        button {
-
-            @include buttonStyle;
-            width: 50%;
-        
-            &:hover {
-              box-shadow: 0 0 10px 3px rgba(255, 255, 255, 0.214);
-            }
-          }
-          
-    }
-    a {
-        text-decoration: none;
-        color: white;
-        font-size: 13px;
-        margin-top: 10px;
-        text-align: center;
-    
-        &:hover {
-          text-decoration: underline;
+      }
+      .password-field {
+        position: relative;
+        width: 100%;
+        .eye-icon {
+          position: absolute;
+          top: 0px;
+          right: 0px;
           cursor: pointer;
         }
       }
+      button {
+        @include buttonStyle;
+        font-size: 20px;
+        width: 50%;
 
-}
+        &:hover {
+          background-color: rgba(255, 0, 34, 0.558);
+        }
+      }
+    }
+    Link {
+      text-decoration: none;
+      color: white;
+      font-size: 13px;
+      margin-top: 10px;
+      text-align: center;
+
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+  }
 }
