--- a/homestay/src/styles/Navbar.scss
+++ b/homestay/src/styles/Navbar.scss
@@ -1,69 +1,113 @@
 @import "./variables.scss";
 @import "./breakpoints.scss";
-
-.navbar {
-  padding: 10px 60px;
+.top {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  background-color: #EDEDED;
-  @include sm {
-    padding: 10px 20px;
-  }
+  align-items: flex-end;
+  justify-content: start;
+  padding: 5px;
+  height: 80px;
 
-  &_logo{
-    height: 70px;
-    width: 100px;
-    cursor: pointer;
-  }
-
-  &_search {
-    border: 1px solid $grey;
-    border-radius: 30px;
-    height: 50px;
-    padding: 0px 20px;
+  &_left {
+    width: 90%;
     display: flex;
-    gap: 40px;
-    align-items: center;
+    align-items: flex-end;
+    justify-content: space-between;
 
-    input {
-      border: none;
-      outline: none;
+    @include sm {
+      width: 91%;
     }
+    @include mm {
+      width: 93%;
+    }
+    @include md {
+      width: 94%;
+    }
+    @include ml {
+      width: 95%;
+    }
+    @include lg {
+      width: 96.4%;
+    }
+  }
+
+  &_img {
+    height: 70px;
+  }
+  &_hostregister {
+    text-decoration: none;
+    padding: 5px;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+      sans-serif;
+    color: white;
+    border: 2px solid red;
+    border-radius: 10px;
+    background-color: red;
 
     &:hover {
-      @include shadow;
+      background-color: $pinkred;
     }
-
-    @include lg {
-      display: none;
-    }
-}
-&_right
-{
-  display: flex;
-  justify-content:space-between;
-  background-color: aqua;
-  width: 150px;
-&_account{
-  display: flex;
-  justify-content: space-between;
-  width:40px;
-}
-&_accountmenu
-  {
+  }
+  &_dropdownmenu {
+    top: calc(80px - 38px);
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:flex-end;
-    padding: 10px;
-    gap: 10px;
-    width: 100px;
-    right: 60px;
-    top:70px;
-    background-color: rgb(26, 255, 0);
+    height: 33px;
+    width: 33px;
+    right: 0px;
+    border-radius: 50%;
+    border: 2px solid transparent;
+    margin: 0px 10px;
+    &:hover {
+      cursor: pointer;
+      .top_dropdownmenu_usericon {
+        background-color: black;
+      }
+      .top_dropdownmenu_downarrowicon {
+        color: black;
+      }
+    }
+    &_usericon {
+      position: absolute;
+      top: 0px;
+      right: -0.5px;
+      border: 2px solid transparent;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      z-index: 0;
+      color: white;
+      background-color: grey;
+    }
+    &_downarrowicon {
+      position: absolute;
+      right: -2px;
+      top: 16px;
+      z-index: 2;
+      background-color: white;
+      border-radius: 50%;
+      color: grey;
+    }
   }
 }
+.dropdownlist {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 6px;
+  top: 72px;
+  color: black;
+  z-index: 3;
+  margin: 5px;
+  font-size: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
+  background-color: rgb(91, 87, 87);
+  padding: 5px;
+  border-radius: 3px;
+  width: 100px;
+  text-decoration: none;
+  &_loginlink {
+    text-decoration: none;
+    color: white;
+    font-weight: 1;
+  }
 }
